fixed spacing from footer, added it before footer

--- a/css/main.css
+++ b/css/main.css
@@ -23,14 +23,14 @@ body{
    padding:0;
    height:100%;
 }
-}
-.subhead{
+
+.bannerdiv{
   text-align: center;
   padding: 1em 0 .5em 0;
-  background: rgb(126,208,236);
+  background-color: #7ed0ef;
   margin: 0;
   color: white;
-  font-size: 2em;
+  font-size: 1.5em;
 }
 nav a{
   text-align: center;
@@ -93,6 +93,7 @@ header{
 }
 .banner{
   width: 100%;
+  display: block;
 }
 p{
   margin: 0;
@@ -363,8 +364,6 @@ a:hover{
 footer{
   padding: 1em 0 0 0.5em;
   background-color:rgb(126,208,236);
-  top: -500px;
-  position: relative;
   color: white;
   width: 100%;
 
@@ -377,9 +376,4 @@ footer{
 .web{
   font-family: 'Pacifico', cursive;
   font-size: 1.25em;
-
-}
-.container{
-  min-height: 100%;
-  position: relative;
 }
